--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wasdacraic/now-rust",
   "description": "Community based builder for using rust on the Vercel platform",
-  "version": "3.1.0",
+  "version": "3.1.1-rc.1",
   "license": "MIT",
   "main": "./dist/index",
   "homepage": "https://github.com/mike-engel/vercel-rust",
